# habiregottenzartto

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/demo-project/: pyproject.toml
examples/demo-project/app/: config.py  main.py
habir/: __init__.py  cli.py  engine.py  tracer.py
habir/analyze/: __init__.py  behavior.py  callgraph.py  deepreach.py  dynamic.py  reachability.py  risk.py  supply_chain.py
habir/core/: __init__.py  model.py  purl.py  version.py
habir/data/: __init__.py
habir/data/seed/: epss.csv  import-map.json  kev.json  top-pypi-packages.txt
habir/data/seed/osv/: GHSA-462w-v97r-4m45.json  GHSA-6757-jp84-gxfx.json  GHSA-8q59-q68h-6hv4.json  GHSA-mh33-7rrq-662w.json  GHSA-x84v-xcm2-53pg.json
habir/data/seed/patches/: GHSA-462w-v97r-4m45.patch  GHSA-6757-jp84-gxfx.patch  GHSA-x84v-xcm2-53pg.patch
habir/mine/: __init__.py  diff.py  symbols.py
habir/report/: __init__.py  cyclonedx.py  evidence.py  json_out.py  sarif.py  terminal.py  vex.py
habir/resolve/: __init__.py  graph.py  pdm.py  pipfile.py  poetry.py  requirements.py  uvlock.py
habir/vuln/: __init__.py  cvss.py  osv.py  store.py
tests/: conftest.py  test_callgraph.py  test_deepreach.py  test_engine.py  test_mine.py  test_osv_match.py  test_reachability.py  test_resolve.py  test_risk.py  test_robustness.py  test_version.py
