[tool.poetry]
name = "demo-project"
version = "0.1.0"
description = "Vulnerable-by-design demo target for habiregottenzartto."
authors = ["demo"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.19.1"
PyYAML = "5.1"
Jinja2 = "2.10"
reqests = "0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
